fixed resultsetrowblocktranslations test module code

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -139,7 +139,7 @@ $(SQLR)-status$(EXE): sqlr-status.cpp sqlr-status.$(OBJ)
 
 sqlrserverconnectiondeclarations.cpp: sqlrserverconnectiondeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../connections/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../connections/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -147,7 +147,7 @@ sqlrserverconnectiondeclarations.cpp: sqlrserverconnectiondeclarations.cpp.in
 
 sqlrserverconnectionassignments.cpp: sqlrserverconnectionassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../connections/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../connections/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -155,7 +155,7 @@ sqlrserverconnectionassignments.cpp: sqlrserverconnectionassignments.cpp.in
 
 sqlrprotocoldeclarations.cpp: sqlrprotocoldeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../protocols/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../protocols/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -163,7 +163,7 @@ sqlrprotocoldeclarations.cpp: sqlrprotocoldeclarations.cpp.in
 
 sqlrprotocolassignments.cpp: sqlrprotocolassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../protocols/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../protocols/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -171,7 +171,7 @@ sqlrprotocolassignments.cpp: sqlrprotocolassignments.cpp.in
 
 sqlrparserdeclarations.cpp: sqlrparserdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
+	for file in `ls ../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -179,7 +179,7 @@ sqlrparserdeclarations.cpp: sqlrparserdeclarations.cpp.in
 
 sqlrparserassignments.cpp: sqlrparserassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
+	for file in `ls ../parsers/*.$(OBJ) 2> /dev/null | grep -v sqlre`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -187,7 +187,7 @@ sqlrparserassignments.cpp: sqlrparserassignments.cpp.in
 
 sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../loggers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../loggers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -195,7 +195,7 @@ sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
 
 sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../loggers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../loggers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -203,7 +203,7 @@ sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
 
 sqlrnotificationdeclarations.cpp: sqlrnotificationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../notifications/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../notifications/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -211,7 +211,7 @@ sqlrnotificationdeclarations.cpp: sqlrnotificationdeclarations.cpp.in
 
 sqlrnotificationassignments.cpp: sqlrnotificationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../notifications/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../notifications/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -219,7 +219,7 @@ sqlrnotificationassignments.cpp: sqlrnotificationassignments.cpp.in
 
 sqlrscheduledeclarations.cpp: sqlrscheduledeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../schedules/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../schedules/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -227,7 +227,7 @@ sqlrscheduledeclarations.cpp: sqlrscheduledeclarations.cpp.in
 
 sqlrscheduleassignments.cpp: sqlrscheduleassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../schedules/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../schedules/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -235,7 +235,7 @@ sqlrscheduleassignments.cpp: sqlrscheduleassignments.cpp.in
 
 sqlrrouterdeclarations.cpp: sqlrrouterdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../routers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../routers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -243,7 +243,7 @@ sqlrrouterdeclarations.cpp: sqlrrouterdeclarations.cpp.in
 
 sqlrrouterassignments.cpp: sqlrrouterassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../routers/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../routers/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -251,7 +251,7 @@ sqlrrouterassignments.cpp: sqlrrouterassignments.cpp.in
 
 sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../pwdencs/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../pwdencs/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -259,7 +259,7 @@ sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
 
 sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../pwdencs/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../pwdencs/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -267,7 +267,7 @@ sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
 
 sqlrauthdeclarations.cpp: sqlrauthdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../auths/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../auths/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -275,7 +275,7 @@ sqlrauthdeclarations.cpp: sqlrauthdeclarations.cpp.in
 
 sqlrauthassignments.cpp: sqlrauthassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../auths/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../auths/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -283,7 +283,7 @@ sqlrauthassignments.cpp: sqlrauthassignments.cpp.in
 
 sqlrdirectivedeclarations.cpp: sqlrdirectivedeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../directives/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../directives/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -291,7 +291,7 @@ sqlrdirectivedeclarations.cpp: sqlrdirectivedeclarations.cpp.in
 
 sqlrdirectiveassignments.cpp: sqlrdirectiveassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../directives/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../directives/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -299,7 +299,7 @@ sqlrdirectiveassignments.cpp: sqlrdirectiveassignments.cpp.in
 
 sqlrtranslationdeclarations.cpp: sqlrtranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../translations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../translations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -307,7 +307,7 @@ sqlrtranslationdeclarations.cpp: sqlrtranslationdeclarations.cpp.in
 
 sqlrtranslationassignments.cpp: sqlrtranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../translations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../translations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -315,7 +315,7 @@ sqlrtranslationassignments.cpp: sqlrtranslationassignments.cpp.in
 
 sqlrbindvariabletranslationdeclarations.cpp: sqlrbindvariabletranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -323,7 +323,7 @@ sqlrbindvariabletranslationdeclarations.cpp: sqlrbindvariabletranslationdeclarat
 
 sqlrbindvariabletranslationassignments.cpp: sqlrbindvariabletranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../bindvariabletranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -331,7 +331,7 @@ sqlrbindvariabletranslationassignments.cpp: sqlrbindvariabletranslationassignmen
 
 sqlrresultsettranslationdeclarations.cpp: sqlrresultsettranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -339,7 +339,7 @@ sqlrresultsettranslationdeclarations.cpp: sqlrresultsettranslationdeclarations.c
 
 sqlrresultsettranslationassignments.cpp: sqlrresultsettranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsettranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -347,7 +347,7 @@ sqlrresultsettranslationassignments.cpp: sqlrresultsettranslationassignments.cpp
 
 sqlrresultsetrowtranslationdeclarations.cpp: sqlrresultsetrowtranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -355,7 +355,7 @@ sqlrresultsetrowtranslationdeclarations.cpp: sqlrresultsetrowtranslationdeclarat
 
 sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsetrowtranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -363,7 +363,7 @@ sqlrresultsetrowtranslationassignments.cpp: sqlrresultsetrowtranslationassignmen
 
 sqlrresultsetrowblocktranslationdeclarations.cpp: sqlrresultsetrowblocktranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -371,7 +371,7 @@ sqlrresultsetrowblocktranslationdeclarations.cpp: sqlrresultsetrowblocktranslati
 
 sqlrresultsetrowblocktranslationassignments.cpp: sqlrresultsetrowblocktranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsetrowblocktranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -379,7 +379,7 @@ sqlrresultsetrowblocktranslationassignments.cpp: sqlrresultsetrowblocktranslatio
 
 sqlrresultsetheadertranslationdeclarations.cpp: sqlrresultsetheadertranslationdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -387,7 +387,7 @@ sqlrresultsetheadertranslationdeclarations.cpp: sqlrresultsetheadertranslationde
 
 sqlrresultsetheadertranslationassignments.cpp: sqlrresultsetheadertranslationassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../resultsetheadertranslations/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -395,7 +395,7 @@ sqlrresultsetheadertranslationassignments.cpp: sqlrresultsetheadertranslationass
 
 sqlrfilterdeclarations.cpp: sqlrfilterdeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../filters/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../filters/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -403,7 +403,7 @@ sqlrfilterdeclarations.cpp: sqlrfilterdeclarations.cpp.in
 
 sqlrfilterassignments.cpp: sqlrfilterassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../filters/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../filters/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -411,7 +411,7 @@ sqlrfilterassignments.cpp: sqlrfilterassignments.cpp.in
 
 sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
 	$(RM) $@
-	for file in `ls ../../queries/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../queries/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
@@ -419,7 +419,7 @@ sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
 
 sqlrqueryassignments.cpp: sqlrqueryassignments.cpp.in
 	$(RM) $@
-	for file in `ls ../../queries/*.$(OBJ) 2> /dev/null`; \
+	for file in `ls ../queries/*.$(OBJ) 2> /dev/null`; \
 	do \
 		module=`basename $$file .$(OBJ)`; \
 		sed -e "s|@module@|$$module|g" $< >> $@; \
