--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -188,6 +188,12 @@
 #define SQLR_ERROR_BULKLOADEXECUTE_TOO_MANY_ERRORS 900026
 #define SQLR_ERROR_BULKLOADEXECUTE_TOO_MANY_ERRORS_STRING \
 	"Bulk load execute failed - too many errors."
+#define SQLR_ERROR_QUERYTRANSLATION 90027
+#define SQLR_ERROR_BINDVARIABLETRANSLATION 90028
+#define SQLR_ERROR_RESULTSETHEADERTRANSLATION 90029
+#define SQLR_ERROR_RESULTSETTRANSLATION 90030
+#define SQLR_ERROR_RESULTSETROWTRANSLATION 90031
+#define SQLR_ERROR_RESULTSETROWBLOCKTRANSLATION 90032
 
 
 #define SQLR_ERROR_ROLLBACK_NOT_IN_TX_BLOCK 999997
