--- a/src/pwdencs/Makefile
+++ b/src/pwdencs/Makefile
@@ -12,6 +12,8 @@ include ../../config.mk
 
 all: $(SQLR)pwdenc_rot.$(LIBEXT) \
 	$(SQLR)pwdenc_md5.$(LIBEXT) \
+	$(SQLR)pwdenc_sha1.$(LIBEXT) \
+	$(SQLR)pwdenc_sha256.$(LIBEXT) \
 	$(SQLR)pwdenc_crypt.$(LIBEXT)
 
 clean:
@@ -24,6 +26,12 @@ $(SQLR)pwdenc_rot.$(LIBEXT): rot.cpp rot.$(OBJ)
 $(SQLR)pwdenc_md5.$(LIBEXT): md5.cpp md5.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ md5.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)pwdenc_sha1.$(LIBEXT): sha1.cpp sha1.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sha1.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
+$(SQLR)pwdenc_sha256.$(LIBEXT): sha256.cpp sha256.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ sha256.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 $(SQLR)pwdenc_crypt.$(LIBEXT): crypt.cpp crypt.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ crypt.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
@@ -33,6 +41,8 @@ installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_rot.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_md5.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)pwdenc_sha1.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)pwdenc_sha256.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_crypt.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
@@ -47,6 +57,14 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_md5.a
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_md5.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)pwdenc_md5.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)pwdenc_sha1.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)pwdenc_sha1.a
+	$(RM) $(libexecdir)/$(SQLR)pwdenc_sha1.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)pwdenc_sha1.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)pwdenc_sha256.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)pwdenc_sha256.a
+	$(RM) $(libexecdir)/$(SQLR)pwdenc_sha256.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)pwdenc_sha256.so so $(MODULESUFFIX)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_crypt.$(LIBEXT) $(libexecdir)
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_crypt.a
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_crypt.$(LIBEXT)
@@ -58,4 +76,6 @@ uninstall:
 		$(libexecdir)/$(SQLR)pwdenc_crypt.* \
 		$(libexecdir)/sqlrpwdenc_rot.* \
 		$(libexecdir)/sqlrpwdenc_md5.* \
+		$(libexecdir)/sqlrpwdenc_sha1.* \
+		$(libexecdir)/sqlrpwdenc_sha256.* \
 		$(libexecdir)/sqlrpwdenc_crypt.*
