sqlrclient supports fetchRow() errors now

--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -69,7 +69,6 @@
 #define DONT_NEED_NEW_CURSOR 1
 
 #define END_COLUMN_INFO 0
-#define END_RESULT_SET 3
 
 #define ACTUAL_ROWS 1
 #define NO_ACTUAL_ROWS 0
@@ -89,6 +88,8 @@
 #define INTEGER_DATA 5
 #define DOUBLE_DATA 6
 #define DATE_DATA 7
+#define END_RESULT_SET 8
+#define FETCH_ERROR 9
 
 #define END_BIND_VARS 8 
 
@@ -188,12 +189,12 @@
 #define SQLR_ERROR_BULKLOADEXECUTE_TOO_MANY_ERRORS 900026
 #define SQLR_ERROR_BULKLOADEXECUTE_TOO_MANY_ERRORS_STRING \
 	"Bulk load execute failed - too many errors."
-#define SQLR_ERROR_QUERYTRANSLATION 90027
-#define SQLR_ERROR_BINDVARIABLETRANSLATION 90028
-#define SQLR_ERROR_RESULTSETHEADERTRANSLATION 90029
-#define SQLR_ERROR_RESULTSETTRANSLATION 90030
-#define SQLR_ERROR_RESULTSETROWTRANSLATION 90031
-#define SQLR_ERROR_RESULTSETROWBLOCKTRANSLATION 90032
+#define SQLR_ERROR_QUERYTRANSLATION 900027
+#define SQLR_ERROR_BINDVARIABLETRANSLATION 900028
+#define SQLR_ERROR_RESULTSETHEADERTRANSLATION 900029
+#define SQLR_ERROR_RESULTSETTRANSLATION 900030
+#define SQLR_ERROR_RESULTSETROWTRANSLATION 900031
+#define SQLR_ERROR_RESULTSETROWBLOCKTRANSLATION 900032
 
 
 #define SQLR_ERROR_ROLLBACK_NOT_IN_TX_BLOCK 999997
