moved mysql front end into main distro

--- a/src/auths/Makefile
+++ b/src/auths/Makefile
@@ -14,7 +14,9 @@ all: all-base $(AUTHALLOPTIONALTARGETS)
 
 all-base: $(SQLR)auth_userlist.$(LIBEXT) \
 		$(SQLR)auth_database.$(LIBEXT) \
-		$(SQLR)auth_proxied.$(LIBEXT)
+		$(SQLR)auth_proxied.$(LIBEXT) \
+		$(SQLR)auth_mysql_userlist.$(LIBEXT) \
+		$(SQLR)auth_mysql_database.$(LIBEXT)
 
 all-sqlrelay: $(SQLR)auth_sqlrelay.$(LIBEXT)
 
@@ -34,6 +36,12 @@ $(SQLR)auth_proxied.$(LIBEXT): proxied.cpp proxied.$(OBJ)
 $(SQLR)auth_sqlrelay.$(LIBEXT): sqlrelay.cpp sqlrelay.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ sqlrelay.$(OBJ) $(LDFLAGS) $(SQLRAUTH_SQLRELAYLIBS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)auth_mysql_userlist.$(LIBEXT): mysql_userlist.cpp mysql_userlist.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ mysql_userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
+$(SQLR)auth_mysql_database.$(LIBEXT): mysql_database.cpp mysql_database.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ mysql_database.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 install: $(INSTALLLIB)
 
 installdll:
@@ -42,6 +50,8 @@ installdll:
 	$(LTINSTALL) $(CP) $(SQLR)auth_database.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_proxied.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrelay.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_userlist.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_database.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB) $(AUTHINSTALLSHAREDLIBOPTIONALTARGETS)
 
@@ -59,6 +69,14 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)auth_proxied.a
 	$(RM) $(libexecdir)/$(SQLR)auth_proxied.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_proxied.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_userlist.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_mysql_userlist.a
+	$(RM) $(libexecdir)/$(SQLR)auth_mysql_userlist.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_mysql_userlist.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_database.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_mysql_database.a
+	$(RM) $(libexecdir)/$(SQLR)auth_mysql_database.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_mysql_database.so so $(MODULESUFFIX)
 
 installsharedlib-sqlrelay:
 	$(MKINSTALLDIRS) $(libexecdir)
@@ -76,6 +94,8 @@ uninstall:
 		$(libexecdir)/$(SQLR)auth_tls_userlist.* \
 		$(libexecdir)/$(SQLR)auth_kerberos_userlist.* \
 		$(libexecdir)/$(SQLR)auth_sqlrelay.* \
+		$(libexecdir)/$(SQLR)auth_mysql_userlist.* \
+		$(libexecdir)/$(SQLR)auth_mysql_database.* \
 		$(libexecdir)/sqlrauth_default.* \
 		$(libexecdir)/sqlrauth_userlist.* \
 		$(libexecdir)/sqlrauth_database.* \
