--- a/test/sqlrelay.conf
+++ b/test/sqlrelay.conf
@@ -271,6 +271,21 @@
 		</connections>
 	</instance>
 
+	<instance id="tlstest" port="9000"
+		socket="/tmp/test.socket"
+		tls="yes"
+		tlscert="/usr/local/firstworks/etc/sqlrelay.conf.d/server.pem"
+		tlspassword="password"
+		tlsvalidate="yes"
+		tlsca="/usr/local/firstworks/etc/sqlrelay.conf.d/ca.pem">
+		<users>
+			<user user="client.localdomain"/>
+		</users>
+		<connections>
+                        <connection string="user=testuser;password=testpassword;oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)))"/>
+		</connections>
+	</instance>
+
 	<instance id="mysqlprotocoltest" dbase="mysql">
 		<listeners>
 			<listener protocol="mysql" port="3306"/>
