--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -28,6 +28,18 @@ do
 			continue
 		fi
 
+	# for the mysqlprotocol test, verify that we support the mysql
+	elif ( test "$DB" = "mysqlprotocol" )
+	then
+		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_mysql.so 2> /dev/null`" )
+		then
+			echo "skipping $DB..."
+			echo
+			echo "================================================================================"
+			echo
+			continue
+		fi
+
 	# for other tests, verify that we support the database
 	else
 		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_$DB.so 2> /dev/null`" )
@@ -82,6 +94,13 @@ do
 		elif ( test "$DB" = "extensions" )
 		then
 			PING=`$PREFIX/bin/sqlrsh -host localhost -user test -password test -command ping 2>&1`
+		elif ( test "$DB" = "mysqlprotocol" )
+		then
+			PING="0: Couldn't connect to the listener."
+			if ( test -n "`netstat -an 2> /dev/null | grep LISTEN | grep 3306`" )
+			then
+				PING="The database is up."
+			fi
 		else
 			PING=`$PREFIX/bin/sqlrsh -id ${DB}test -command ping 2>&1`
 		fi
@@ -113,7 +132,13 @@ do
 		echo
 		echo "success..."
 		echo
-		./test.sh $DB
+
+		if ( test "$DB" = "mysqlprotocol" )
+		then
+			./dropin/mysql
+		else
+			./test.sh $DB
+		fi
 	else
 		echo
 		echo "failed to start ${DB}test"
@@ -136,12 +161,12 @@ do
 	if ( test "$DB" = "router" )
 	then
 		sleep 2
-		$PREFIX/bin/sqlr-stop -id routermaster
+		$PREFIX/bin/sqlr-stop -config `pwd`/sqlrelay.conf -id routermaster
 		sleep 2
-		$PREFIX/bin/sqlr-stop -id routerslave
+		$PREFIX/bin/sqlr-stop -config `pwd`/sqlrelay.conf -id routerslave
 	fi
 	sleep 2
-	$PREFIX/bin/sqlr-stop -id ${DB}test
+	$PREFIX/bin/sqlr-stop -config `pwd`/sqlrelay.conf -id ${DB}test
 	sleep 2
 
 	echo
