--- a/configure.in
+++ b/configure.in
@@ -879,7 +879,7 @@ dnl    (and set MINOR and PATCH to 0)
 dnl 2. MINOR when you make backwards-incompatible changes
 dnl    (and set PATCH to 0)
 dnl 3. PATCH when you make backwards-compatible changes
-SQLR_VERSION="1.4.0"
+SQLR_VERSION="1.5.0"
 AC_SUBST(SQLR_VERSION)
 AC_DEFINE_UNQUOTED(SQLR_VERSION,"$SQLR_VERSION",Version)
 
@@ -890,7 +890,7 @@ dnl if library source changed at all,         c:r:a -> c:r+1:a
 dnl if interfaces added, removed, or changed, c:r:a -> c+1:0:a
 dnl if interfaces added,                      c:r:a -> c:r:a+1
 dnl if interfaces removed,                    c:r:a -> c:r:0
-SRV_SONAME_VERSION_INFO="8:0:0"
+SRV_SONAME_VERSION_INFO="9:0:0"
 CLT_SONAME_VERSION_INFO="5:0:0"
 AC_SUBST(SRV_SONAME_VERSION_INFO)
 AC_SUBST(CLT_SONAME_VERSION_INFO)
@@ -1142,6 +1142,9 @@ fi
 if ( test -n "$ENABLE_ROUTER" ); then
 	ROUTERBUILD="yes"
 	TESTDBS="$TESTDBS router"
+fi
+if ( test -n "$MYSQLLIBS" ); then
+	TESTDBS="$TESTDBS mysqlprotocol"
 fi
 AC_SUBST(TESTDBS)
 AC_SUBST(TESTAPIS)
