--- a/doc/admin/parts/sqlrelay-mysqlfebasic.conf
+++ b/doc/admin/parts/sqlrelay-mysqlfebasic.conf
@@ -2,9 +2,14 @@
 <instances>
 
 	<instance id="example" dbase="mysql">
-		<users>
-			<user user="sqlruser" password="sqlrpassword"/>
-		</users>
+		<listeners>
+			<listener protocol="mysql" port="3307"/>
+		</listeners>
+		<auths>
+			<auth module="mysql_userlist">
+				<user user="sqlruser" password="sqlrpassword"/>
+			</auth>
+		</auths>
 		<connections>
 			<connection string="user=mysqluser;password=mysqlpassword;db=mysqldb;host=mysqlhost"/>
 		</connections>
