--- a/doc/admin/parts/sqlrelay-mysqlfedatabase.conf
+++ b/doc/admin/parts/sqlrelay-mysqlfedatabase.conf
@@ -2,9 +2,12 @@
 <instances>
 
 	<instance id="example" dbase="mysql">
-		<users>
-			<user user="sqlruser" password="sqlrpassword"/>
-		</users>
+		<listeners>
+			<listener protocol="mysql" port="3306"/>
+		</listeners>
+		<auths>
+			<auth module="mysql_database"/>
+		</auths>
 		<connections>
 			<connection string="user=mysqluser;password=mysqlpassword;db=mysqldb;host=mysqlhost"/>
 		</connections>
