got deadlock replay to work with binds added triggers to uninstall/clean targets

--- a/src/Makefile
+++ b/src/Makefile
@@ -65,6 +65,9 @@ all-resultsetheadertranslations:
 all-filters:
 	cd filters $(AND) $(MAKE) all
 
+all-triggers:
+	cd triggers $(AND) $(MAKE) all
+
 all-moduledatas:
 	cd moduledatas $(AND) $(MAKE) all
 
@@ -95,6 +98,7 @@ clean:
 	cd resultsetrowblocktranslations $(AND) $(MAKE) clean
 	cd resultsetheadertranslations $(AND) $(MAKE) clean
 	cd filters $(AND) $(MAKE) clean
+	cd triggers $(AND) $(MAKE) clean
 	cd moduledatas $(AND) $(MAKE) clean
 	cd connections $(AND) $(MAKE) clean
 	cd server $(AND) $(MAKE) clean
@@ -165,6 +169,9 @@ install-resultsetheadertranslations:
 install-filters:
 	cd filters $(AND) $(MAKE) install
 
+install-triggers:
+	cd triggers $(AND) $(MAKE) install
+
 install-moduledatas:
 	cd moduledatas $(AND) $(MAKE) install
 
@@ -195,6 +202,7 @@ uninstall:
 	cd resultsetrowblocktranslations $(AND) $(MAKE) uninstall
 	cd resultsetheadertranslations $(AND) $(MAKE) uninstall
 	cd filters $(AND) $(MAKE) uninstall
+	cd triggers $(AND) $(MAKE) uninstall
 	cd moduledatas $(AND) $(MAKE) uninstall
 	cd connections $(AND) $(MAKE) uninstall
 	cd server $(AND) $(MAKE) uninstall
