--- a/test/tcl/mysql.tcl.in
+++ b/test/tcl/mysql.tcl.in
@@ -198,7 +198,7 @@ checkSuccess [$cur getColumnTypeByIndex 10] "DATETIME"
 checkSuccess [$cur getColumnTypeByIndex 11] "YEAR"
 checkSuccess [$cur getColumnTypeByIndex 12] "STRING"
 checkSuccess [$cur getColumnTypeByIndex 13] "BLOB"
-checkSuccess [$cur getColumnTypeByIndex 14] "CHAR"
+checkSuccess [$cur getColumnTypeByIndex 14] "VARSTRING"
 checkSuccess [$cur getColumnTypeByIndex 15] "TINYBLOB"
 checkSuccess [$cur getColumnTypeByIndex 16] "MEDIUMBLOB"
 checkSuccess [$cur getColumnTypeByIndex 17] "LONGBLOB"
@@ -217,7 +217,7 @@ checkSuccess [$cur getColumnTypeByName "testdatetime"] "DATETIME"
 checkSuccess [$cur getColumnTypeByName "testyear"] "YEAR"
 checkSuccess [$cur getColumnTypeByName "testchar"] "STRING"
 checkSuccess [$cur getColumnTypeByName "testtext"] "BLOB"
-checkSuccess [$cur getColumnTypeByName "testvarchar"] "CHAR"
+checkSuccess [$cur getColumnTypeByName "testvarchar"] "VARSTRING"
 checkSuccess [$cur getColumnTypeByName "testtinytext"] "TINYBLOB"
 checkSuccess [$cur getColumnTypeByName "testmediumtext"] "MEDIUMBLOB"
 checkSuccess [$cur getColumnTypeByName "testlongtext"] "LONGBLOB"
