debian build updates

--- a/config.mk.in
+++ b/config.mk.in
@@ -63,8 +63,8 @@ COMPILE = -c
 OUT = -o 
 BASECPPFLAGS = @CPPFLAGS@
 EXTRACPPFLAGS =
-CXXFLAGS = @CXXFLAGS@ @WALL@ @PIPE@ @WNOLONGDOUBLE@ @WNOOVERLOADEDVIRTUAL@
-CFLAGS = @CFLAGS@ @WALL@ @PIPE@ @WNOLONGDOUBLE@ @WNOOVERLOADEDVIRTUAL@
+CXXFLAGS = @CXXFLAGS@ @WALL@ @PIPE@ @WNOLONGDOUBLE@ @WNOOVERLOADEDVIRTUAL@ @WNOERRORDATETIME@
+CFLAGS = @CFLAGS@ @WALL@ @PIPE@ @WNOLONGDOUBLE@ @WNOOVERLOADEDVIRTUAL@ @WNOERRORDATETIME@
 WERROR = @WERROR@
 WNOUNKNOWNPRAGMAS = @WNOUNKNOWNPRAGMAS@
 WNOMISMATCHEDTAGS = @WNOMISMATCHEDTAGS@
