--- a/configure.in
+++ b/configure.in
@@ -663,6 +663,7 @@ FW_CHECK_WALL
 FW_CHECK_WNOOVERLOADEDVIRTUAL
 FW_CHECK_WNOMISMATCHEDTAGS
 FW_CHECK_WNOUNKNOWNPRAGMAS
+FW_CHECK_WNOERRORDATETIME
 FW_CHECK_DEBUG
 FW_CHECK_NEW_DTAGS
 
